@@ -1,3 +1,12 @@
+2014-08-09  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* info/session.c (match_in_match_list): Arguments changed.  Output
+	index of match in list.
+	(info_search_in_node_internal): Argument removed.  Always return start
+	of match.  All callers updated.  Check whether to set cursor point at
+	end of match.
+	(info_search_internal): Arguments changed.  All callers updated.
+
 2014-08-08  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* info/session.c (ask_for_search_string): Split out from
